# sargentAI

./: .gitignore  CLAUDE.md  PARALLEL_TASKS.md  README.md  ROADMAP.md  fix_lock.sh  project-specifics.md
.claude/agents/: architect.md  orchestrator.md  qa.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml
backend/crates/api/: Cargo.toml
backend/crates/api/models/: LICENSE.md
backend/crates/api/src/: db.rs  error.rs  health.rs  http.rs  lib.rs  main.rs  storage.rs
backend/crates/api/src/archetype/: handlers.rs  mod.rs
backend/crates/api/src/auth/: extractor.rs  google.rs  handlers.rs  mod.rs  password.rs  token.rs
backend/crates/api/src/matching/: handlers.rs  mod.rs
backend/crates/api/src/measurements/: handlers.rs  mod.rs
backend/crates/api/src/nutrition/: foods.rs  handlers.rs  mod.rs
backend/crates/api/src/photo/: handlers.rs  mod.rs
backend/crates/api/src/pose/: mod.rs
backend/crates/api/src/profile/: handlers.rs  mod.rs
backend/crates/api/src/program/: handlers.rs  mod.rs
backend/crates/api/src/summary/: handlers.rs  mod.rs
backend/crates/api/src/synthetic/: mod.rs  routes.rs
backend/crates/api/src/voice/: handlers.rs  mod.rs  parse.rs
backend/crates/api/src/workout/: handlers.rs  mod.rs
backend/crates/api/tests/: archetype.rs  auth.rs  auth_expiry.rs  auth_google.rs  auth_no_plaintext_logs.rs  health.rs  matching.rs  measurements.rs  nutrition.rs  photo.rs  pose_onnx.rs  profile.rs  program.rs  storage.rs  summary.rs  synthetic.rs  voice_intent.rs  workout.rs
backend/crates/api/tests/common/: mod.rs
backend/crates/api/tests/fixtures/: SOURCES.md  google_test_rsa.pem  google_test_rsa_pub.pem
backend/crates/core/: Cargo.toml
backend/crates/core/src/: adjust.rs  aggregate.rs  authoring.rs  lib.rs  nutrition.rs  periodize.rs  photo.rs  profile.rs  user.rs  workout.rs
backend/crates/core/src/archetype/: mod.rs  seed.rs
backend/crates/core/src/matching/: mod.rs
backend/crates/core/src/pose/: mod.rs
backend/crates/core/src/program/: mod.rs  tests.rs
backend/crates/core/tests/: archetype.rs  email.rs  matching.rs  nutrition.rs  photo.rs  pose.rs  profile.rs  workout.rs
backend/migrations/: 00001_users.sql  00002_user_profiles.sql  00003_workout_logs.sql  00004_nutrition_logs.sql  00005_photo_sessions.sql  00006_user_programs.sql  00007_google_nullable_password.sql  00008_body_measurements.sql
backend/scripts/dev/: db.sh
docs/: fitness_ai_project.md  flutter-audio-research.md  ml-cloud-training-research.md  sensor-node-roadmap.md
docs/agents/: task-1-spec-0027.md  task-2-req-0029-web-frontend.md  task-3-req-0030-body-type-picker.md  task-4-req-0031-nutrition-llm.md  task-5-research-cloud-ml.md  task-6-research-flutter-audio.md
docs/qa/: R-0001-test-plan.md
infra/cloudflare/: .dev.vars.example  README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
infra/cloudflare/src/: index.ts
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/integration_test/: login_to_home_test.dart
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: app.dart  main.dart
mobile/lib/screens/: home_screen.dart
mobile/lib/src/audio/: tts_scripts.dart
mobile/lib/src/core/: brand.dart  dev_login.dart  google_sign_in_config.dart
mobile/lib/src/hub/: sergeant.dart  speech_input.dart  voice_hub_screen.dart  voice_intent.dart  voice_intent_service.dart  (+2 more)
mobile/test/: flutter_tts_mock.dart  home_screen_test.dart  widget_test.dart
mobile/test/auth/: auth_api_test.dart  auth_controller_test.dart  auth_state_test.dart  login_screen_test.dart  register_screen_test.dart
mobile/test/core/: api_exception_from_dio_test.dart  api_exception_test.dart  app_config_test.dart  auth_interceptor_test.dart  token_store_test.dart  user_scoped_cache_test.dart
mobile/test/hub/: voice_hub_screen_test.dart  voice_intent_service_test.dart  voice_intent_test.dart  voice_protocol_test.dart
mobile/test/measurements/: coach_card_test.dart  per_lift_and_balance_test.dart  strength_trend_test.dart
mobile/test/nutrition/: preset_meals_test.dart
mobile/test/program/: body_type_picker_screen_test.dart  program_detail_screen_test.dart  program_proposals_screen_test.dart
mobile/test/router/: app_router_test.dart
mobile/test/shell/: home_shell_test.dart
mobile/test/support/: fakes.dart  profile_fakes.dart  program_fakes.dart  voice_fakes.dart  workout_fakes.dart
mobile/web/: index.html  manifest.json
requirements/: 0001-monorepo-scaffold.md  0002-user-authentication.md  0003-user-profile.md  0004-workout-log.md  0005-nutrition-log.md  0006-photo-session.md  0007-flutter-app-shell.md  0008-onboarding.md  0009-live-workout-logger.md  0012-archetype-library.md  0013-archetype-matching.md  0014-program-diet-from-archetype.md  0015-log-aggregation.md  0017-adjustment-engine.md  0027-earbud-guided-training.md  0029-web-frontend.md  0030-body-type-picker.md  0031-nutrition-substitution.md  0032-voice-assistant.md  0033-google-sign-in.md  0035-earbud-handsfree-training.md  0036-voice-reminders.md  0037-conversational-voice-intent.md  0038-periodization-engines.md  0039-program-authoring.md  README.md  TEMPLATE.md
scripts/: serve_web.py
scripts/dev/: run.sh
scripts/qa/: r-0001-ac1-cargo-build.sh  r-0001-ac3-cargo-clippy.sh  r-0001-ac4-cargo-fmt.sh  r-0001-ac6-dart-fmt.sh  r-0001-ac7-docker-health.sh  r-0001-ac8-ci-status.sh  run-all.sh
specs/: 0001-monorepo-scaffold.md  0002-user-authentication.md  0003-user-profile.md  0004-workout-log.md  0005-nutrition-log.md  0006-photo-session.md  0007-flutter-app-shell.md  0008-onboarding.md  0009-live-workout-logger.md  0012-archetype-library.md  0013-archetype-matching.md  0014-program-diet-from-archetype.md  0015-log-aggregation.md  0017-adjustment-engine.md  0027-earbud-guided-training.md  0030-body-type-picker.md  0032-voice-assistant.md  0035-earbud-handsfree-training.md  0038-periodization-engines.md  0039-program-authoring.md  README.md  TEMPLATE.md
(+110 files in other folders)
