[workspace]
resolver = "2"
members = ["crates/api", "crates/core"]

[workspace.package]
edition = "2021"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "fs"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# R-0002 / SPEC-0002 §2.8 additions.
fitai-core = { path = "crates/core" }
# `tls-rustls-ring` so hosted Postgres (Neon et al., sslmode=require) works;
# rustls keeps the image OpenSSL-free (same choice as reqwest above).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono", "tls-rustls-ring"] }
argon2 = "0.5"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
eyre = "0.6"
tracing-test = "0.2"

# R-0006 / SPEC-0006 §2.7 — the photo-session object-store seam.
bytes = "1"
async-trait = "0.1"

# R-0013 / SPEC-0013 §2.6 — in-process ONNX pose estimation + image decode.
# `default-features = false` drops `download-binaries` (and its `ureq`/TLS chain),
# so the build never reaches `cdn.pyke.io`. The ONNX Runtime shared library is
# installed into the image and linked dynamically via `ORT_LIB_LOCATION` +
# `ORT_PREFER_DYNAMIC_LINK` (see `backend/Dockerfile`). `api-24` matches the ONNX
# Runtime 1.24 ABI that `ort-sys` 2.0.0-rc.12 targets.
ort = { version = "=2.0.0-rc.12", default-features = false, features = [
    "std",
    "ndarray",
    "tracing",
    "api-24",
] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
