[package]
name = "fitai-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true   # inherits workspace value (false)

[lib]
path = "src/lib.rs"

[[bin]]
name = "fitai-api"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
fitai-core.workspace = true
sqlx.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
validator.workspace = true
eyre.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
reqwest.workspace = true
tracing-test.workspace = true
