[package]
name = "fitai-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true   # inherits workspace value (false)

[lib]
path = "src/lib.rs"

[[bin]]
name = "fitai-api"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
axum = { workspace = true, features = ["multipart"] }
tokio.workspace = true
bytes.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
fitai-core.workspace = true
sqlx.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
validator.workspace = true
eyre.workspace = true
tower-http.workspace = true
# R-0032 — USDA FoodData Central nutrient lookup (nutrition/foods.rs).
reqwest.workspace = true
regex = "1"
ort.workspace = true
image.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
reqwest.workspace = true
tracing-test.workspace = true
# R-0006 / SPEC-0006 §2.7 — the photo-session object-store seam test root.
# (`bytes` is now a production dependency, available to tests too.)
tempfile = "3"
