[package]
name = "fitai-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true

# Test-only: the SPEC-0003 §2.4 exhaustive serde-vs-as_str encoding test
# serializes Goal/Sex to JSON. Dev-only, so the production purity boundary
# (no sqlx/axum/http) is preserved.
[dev-dependencies]
serde_json.workspace = true
